<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="addArtsDetailsFragment"
            type="com.example.artbookhilttesting.ui.fragment.adddetailsfragment.viewmodel.AddArtDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.adddetailsfragment.AddArtDetailsFragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="#D7DADA"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/art_image_view"
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_image" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_enter_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:hint="Enter Name"
            android:textColorHint="#c7c8cb"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <EditText
                android:id="@+id/et_enter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={addArtsDetailsFragment.etName}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_enter_artist"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:hint="Enter Artist"
            android:textColorHint="#c7c8cb"
            app:layout_constraintEnd_toEndOf="@+id/text_input_enter_name"
            app:layout_constraintStart_toStartOf="@+id/text_input_enter_name"
            app:layout_constraintTop_toBottomOf="@+id/text_input_enter_name">

            <EditText
                android:id="@+id/et_enter_arts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={addArtsDetailsFragment.etArtistName}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_enter_year"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:hint="Enter Year"
            android:textColorHint="#c7c8cb"
            app:layout_constraintEnd_toEndOf="@+id/text_input_enter_artist"
            app:layout_constraintStart_toStartOf="@+id/text_input_enter_artist"
            app:layout_constraintTop_toBottomOf="@+id/text_input_enter_artist">

            <EditText
                android:id="@+id/et_enter_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={addArtsDetailsFragment.etYear}"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/saveButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="56dp"
            android:text="Save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_enter_year" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>